CSS: ensure that links in the attachment widget's error messages are legible (add contrast).
FossilOrigin-Name: f3bf8445746feea03d60f906357ef1e0cb630cc68bbcb5f085292f1954568b10

--- a/src/default.css
+++ b/src/default.css
@@ -2038,6 +2038,10 @@ details.attachlist > summary {
   background-color: #d32f2f;
   color: #fff;
 }
+.Attacher .error a {
+  color: inherit;
+  text-decoration: underline;
+}
 body.fossil-dark-style .Attacher .attach-row {
   background-color: initial;
 }
